--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zion-site",
   "version": "0.1.0",
-  "homepage": "https://ZionMiller.github.io/zion-site",
+  "homepage": "https://ZionMiller.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -23,7 +23,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
