--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zion-site",
   "version": "0.1.0",
-  "homepage": "https://ZionMiller.github.io/zion-site",
+  "homepage": "https://ZionMiller.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
